--- a/Style.css
+++ b/Style.css
@@ -214,6 +214,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 10px;
   color: #C2B500;
 }
+
 .column img {
   margin-top: 8px;
   vertical-align: middle;
@@ -305,7 +306,7 @@ textarea {
 
 @media screen and (max-width: 600px) {
   .side {
-    margin-top: 80px;
+    padding-top: 1px;
     width: 100%;
     display: block;
     margin-bottom: 20px;
