--- a/Style.scss
+++ b/Style.scss
@@ -331,7 +331,7 @@ textarea {
 
 @media screen and (max-width: 600px) {
   .side {
-    margin-top: 80px;
+    padding-top: 1px;
     width: 100%;
     display: block;
     margin-bottom: 20px;
